# mcp-svg-animator

./: CLAUDE.md  LICENSE  README.md  bounce-and-fade.webm  pyproject.toml  requirements.txt
docs/: specification.md  usage.md
examples/: balloon_friends.webm  chain_reaction.webm  connection_demo.webm  curves.yaml  data-flow.webm  demo.html  demo.yaml  fission_reaction.webm  flowchart_animation.webm  fusion_reaction.webm  fusion_reaction_early_energy.webm  fusion_reaction_looping.webm  hydrogen_atom.webm  hydrogen_atom_buggy.webm  meeting-description.md  meeting.webm  meeting.yaml  stick_figure.yaml  stick_figure_waving.yaml
plan/: mcp-svg-animator-plan.mm  mcp-svg-server-overview.md  progress-2026-01-18.md  progress-2026-01-21.md  progress-2026-01-23.md  progress-2026-01-24.md  progress-2026-01-25.md
plan/diagrams/: figure2-method-flow.dot  figure5-dsl-structure.dot  figure6-rendering-backends.dot  patent-diagram-clean.mermaid  patent-diagram.dot
src/mcp_svg_animator/: __init__.py  __main__.py  api.py  config.py  server.py
src/mcp_svg_animator/generators/: __init__.py  animations.py  png_generator.py  position_resolver.py  video_generator.py  yaml_loader.py
src/mcp_svg_animator/generators/specs/: __init__.py  animation_spec.py  circle_spec.py  connection_spec.py  element_spec.py  ellipse_spec.py  group_spec.py  line_spec.py  path_spec.py  rectangle_spec.py  segment_specs.py  text_spec.py  transform_animation_spec.py
stubs/drawsvg/: __init__.pyi
tests/: test_animations.py
tests/unit/: test_animations.py  test_config.py  test_connection.py  test_new_features.py  test_position_resolver.py  test_server.py  test_video_generator.py  test_yaml_loader.py
