[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-svg-animator"
version = "0.4.1"
description = "An MCP server for creating svg animations."
authors = [{name = "Romilly Cocking", email = "romilly.cocking@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "playwright>=1.40.0",
    "drawsvg>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pyright",
    "PyHamcrest",
]

[project.urls]
Homepage = "https://github.com/romilly/mcp-svg-animator"
Repository = "https://github.com/romilly/mcp-svg-animator.git"
Issues = "https://github.com/romilly/mcp-svg-animator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pyright]
stubPath = "stubs"